druid: cleanup recipes a bit